samples/_failures_safe/1761595392_f3d9ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efd28766.c: In function ‘main’:
./samples/SAFE/__tmp_efd28766.c:154:5: error: expected declaration or statement at end of input
  154 |     if (compressed.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_efd28766.c:154:5: error: expected declaration or statement at end of input
